--- a/src/app/pages/agenda/agenda.page.html
+++ b/src/app/pages/agenda/agenda.page.html
@@ -1,16 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Agenda Diaria</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content class="ion-padding">
-  <ion-list>
-    <ion-item *ngFor="let evento of eventos">
-      <ion-label>
-        <h2>{{ evento.hora }} - {{ evento.descripcion }}</h2>
-      </ion-label>
-      <ion-checkbox slot="end" [(ngModel)]="evento.completado"></ion-checkbox>
-    </ion-item>
-  </ion-list>
-</ion-content>
+<ion-list *ngIf="eventos.length > 0; else sinEventos">
+  <ion-item *ngFor="let evento of eventos">
+    <ion-label>
+      <h2>{{ evento.hora }} - {{ evento.descripcion }}</h2>
+    </ion-label>
+    <ion-select [(ngModel)]="evento.completado" interface="popover">
+      <ion-select-option value="Sí">Sí</ion-select-option>
+      <ion-select-option value="No">No</ion-select-option>
+    </ion-select>
+  </ion-item>
+</ion-list>
+<ng-template #sinEventos>
+  <ion-item>
+    <ion-label>No hay eventos para esta fecha.</ion-label>
+  </ion-item>
+</ng-template>
