--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,19 +1,28 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <div class="login-form">
+    <div class="logo-container">
+      <img src="assets/logo.png" alt="Logo de la app" class="logo" />
+    </div>
 
-<ion-content class="ion-padding">
-  <ion-item>
-    <ion-label position="floating">Usuario</ion-label>
-    <ion-input [(ngModel)]="usuario"></ion-input>
-  </ion-item>
+    <h1 class="ion-text-center">PlanGO</h1>
+    <h6 class="ion-text-center">Planifica tu día a día</h6>
+    <h2 class="ion-text-center">¡Bienvenido!</h2>
 
-  <ion-item>
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input [(ngModel)]="password" type="password"></ion-input>
-  </ion-item>
+    <ion-item>
+      <ion-label position="floating">Usuario</ion-label>
+      <ion-input [(ngModel)]="usuario" required minlength="3" maxlength="8"></ion-input>
+    </ion-item>
 
-  <ion-button expand="full" (click)="login()">Ingresar</ion-button>
+    <ion-item>
+      <ion-label position="floating">Contraseña</ion-label>
+      <ion-input [(ngModel)]="password" type="password" required pattern="[0-9]{4}"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" (click)="login()">Ingresar</ion-button>
+
+    <div class="registro-link">
+      <ion-label>¿No tienes cuenta?</ion-label>
+      <ion-button fill="clear" size="small" (click)="goToRegister()">Registrarse</ion-button>
+    </div>
+  </div>
 </ion-content>
