--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,19 +1,95 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Registro</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Registro de Usuario</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-item>
-    <ion-label position="floating">Usuario</ion-label>
-    <ion-input [(ngModel)]="usuario"></ion-input>
-  </ion-item>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Crear Cuenta</ion-card-title>
+      <ion-card-subtitle>Por favor completa todos los campos</ion-card-subtitle>
+    </ion-card-header>
 
-  <ion-item>
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input [(ngModel)]="password" type="password"></ion-input>
-  </ion-item>
+    <ion-card-content>
+      <form #formulario="ngForm" (ngSubmit)="registrar(formulario)">
 
-  <ion-button expand="full" (click)="registrar()">Registrar</ion-button>
+        <ion-item>
+          <ion-label position="floating">Nombres</ion-label>
+          <ion-input type="text" [(ngModel)]="usuario.nombres" name="nombres" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Apellido Paterno</ion-label>
+          <ion-input type="text" [(ngModel)]="usuario.apellidoPaterno" name="apellidoPaterno" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Apellido Materno</ion-label>
+          <ion-input type="text" [(ngModel)]="usuario.apellidoMaterno" name="apellidoMaterno" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Género</ion-label>
+          <ion-select [(ngModel)]="usuario.genero" name="genero" placeholder="Selecciona uno" required>
+            <ion-select-option value="masculino">Masculino</ion-select-option>
+            <ion-select-option value="femenino">Femenino</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <!-- 📅 Fecha de nacimiento -->
+        <ion-item>
+          <ion-label>Fecha de Nacimiento</ion-label>
+          <ion-datetime-button datetime="fechaNacimiento"></ion-datetime-button>
+        </ion-item>
+
+        <ion-modal trigger="fechaNacimiento">
+          <ng-template>
+            <ion-datetime
+              id="fechaNacimiento"
+              name="fechaNacimiento"
+              presentation="date"
+              [(ngModel)]="usuario.fechaNacimiento"
+              preferWheel="false"
+              showDefaultButtons="true"
+              cancelText="Cancelar"
+              doneText="Aceptar"
+              max="2025-12-31"
+              (ionConfirm)="guardarFecha($event)">
+            </ion-datetime>
+          </ng-template>
+        </ion-modal>
+
+        <ion-text color="medium" class="ion-margin-start" *ngIf="fechaFormateada">
+          <p>Fecha seleccionada: {{ fechaFormateada }}</p>
+        </ion-text>
+
+        <ion-item>
+          <ion-label position="floating">Correo Electrónico</ion-label>
+          <ion-input type="email" [(ngModel)]="usuario.email" name="email" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Teléfono Celular</ion-label>
+          <ion-input type="tel" [(ngModel)]="usuario.telefono" name="telefono" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>País</ion-label>
+          <ion-select [(ngModel)]="usuario.pais" name="pais" placeholder="Selecciona tu país" required>
+            <ion-select-option value="Chile">Chile</ion-select-option>
+            <ion-select-option value="Argentina">Argentina</ion-select-option>
+            <ion-select-option value="Perú">Perú</ion-select-option>
+            <ion-select-option value="México">México</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-button expand="full" type="submit" class="ion-margin-top" [disabled]="formulario.invalid">
+          Registrarse
+        </ion-button>
+
+      </form>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
+
