--- a/src/app/pages/tareas/tareas.page.html
+++ b/src/app/pages/tareas/tareas.page.html
@@ -1,14 +1,59 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home" text="" color="light"></ion-back-button>
+    </ion-buttons>
     <ion-title>Tareas</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
+
+  <!-- Agregar nueva tarea -->
+  <ion-item>
+    <ion-input
+      placeholder="Nueva tarea..."
+      [(ngModel)]="nuevaTarea"
+      (keyup.enter)="agregarTarea()"
+    ></ion-input>
+    <ion-button fill="clear" (click)="agregarTarea()">
+      <ion-icon name="add" slot="icon-only"></ion-icon>
+    </ion-button>
+  </ion-item>
+
+  <!-- Lista de tareas -->
   <ion-list>
-    <ion-item *ngFor="let tarea of tareas">
-      <ion-label>{{ tarea.descripcion }}</ion-label>
-      <ion-checkbox slot="end" [(ngModel)]="tarea.completado"></ion-checkbox>
+    <ion-item *ngFor="let tarea of tareas; let i = index">
+      <ion-checkbox
+        slot="start"
+        [(ngModel)]="tarea.completada"
+        (ionChange)="toggleCompletada(i)"
+      ></ion-checkbox>
+
+      <ion-label *ngIf="!tarea.editando">
+        <h2 [style.text-decoration]="tarea.completada ? 'line-through' : 'none'">
+          {{ tarea.titulo }}
+        </h2>
+      </ion-label>
+
+      <ion-input
+        *ngIf="tarea.editando"
+        [(ngModel)]="tarea.titulo"
+        (keyup.enter)="guardarEdicion(i)"
+      ></ion-input>
+
+      <ion-buttons slot="end">
+        <ion-button fill="clear" (click)="editarTarea(i)" *ngIf="!tarea.editando">
+          <ion-icon name="create" slot="icon-only"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="guardarEdicion(i)" *ngIf="tarea.editando">
+          <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" color="danger" (click)="eliminarTarea(i)">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-item>
   </ion-list>
+
 </ion-content>
