--- a/src/app/pages/habitos/habitos.page.scss
+++ b/src/app/pages/habitos/habitos.page.scss
@@ -1,30 +1,39 @@
-ion-header {
-  ion-title {
-    font-weight: bold;
-  }
+/* Reduce el tamaño del texto en los chips */
+.template-list ion-chip ion-label {
+  font-size: 0.8rem;
 }
 
-ion-content {
-  ion-item {
-    margin-bottom: 10px;
-  }
+/* Reduce el tamaño del título de cada hábito activo */
+ion-card-title {
+  font-size: 1rem;
+}
 
-  ion-label h2 {
-    font-size: 1.1rem;
-    margin: 0;
-  }
+/* Reduce un poco el tamaño de los botones de días */
+.dias button {
+  background: #f1f1f1;
+  border: none;
+  border-radius: 4px;
+  padding: 4px 6px;
+  font-size: 0.75rem;
+  cursor: pointer;
+  transition: all 0.3s;
+}
 
-  ion-label p {
-    font-size: 0.85rem;
-    color: #555;
-    margin: 2px 0;
-  }
+/* Si quieres aún más discreto para el badge */
+.badge {
+  text-align: center;
+  margin-top: 8px;
+  font-size: 0.9rem;
+  animation: pulse 1s infinite;
+}
 
-  ion-checkbox {
-    margin-right: 10px;
-  }
 
-  ion-button {
-    font-size: 1.2rem;
-  }
+
+ion-toolbar {
+  --background: #6980d3; /* color barra principal*/
+  --color: #ffffff;      /* texto blanco */
+}
+
+ion-back-button {
+  --color: #ffffff;
 }
