--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,10 +3,13 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Calendario</ion-title>
+    <ion-title>Calendario de Eventos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <full-calendar [options]="calendarOptions"></full-calendar>
+<ion-content>
+  <full-calendar
+    [options]="calendarOptions"
+    style="margin: 10px;"
+  ></full-calendar>
 </ion-content>
