--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,6 +1,80 @@
-
-
-::ng-deep .fc {
-  font-family: "Arial", sans-serif;
+:host {
+  display: block;
+  background: #f8f9fa;
 }
-  
+
+ion-content {
+  --padding-start: 12px;
+  --padding-end: 12px;
+}
+
+.color-dot {
+  width: 14px;
+  height: 14px;
+  display: inline-block;
+  border-radius: 50%;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+.full-calendar {
+  font-family: 'Segoe UI', sans-serif;
+  --fc-border-color: #e0e0e0;
+  --fc-today-bg-color: #d7efff;
+}
+
+.fc-event {
+  border-radius: 6px;
+  padding: 3px 8px;
+  font-size: 0.85rem;
+  border: none;
+  color: white !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.fc-daygrid-day:hover {
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.fc-daygrid-day.fc-day-today {
+  background-color: #e3f2fd !important;
+  border: 1px solid #2196f3;
+}
+
+.fc-toolbar-title {
+  font-size: 1.2rem;
+  color: #333;
+  font-weight: 600;
+}
+
+.fc-button {
+  background-color: #2196f3;
+  color: white;
+  border-radius: 4px;
+  border: none;
+  font-size: 0.8rem;
+  padding: 0.4rem 0.6rem;
+}
+
+.fc-button:hover {
+  background-color: #1976d2;
+}
+
+ion-toolbar {
+  --background: #6980d3; /* color barra principal */
+  --color: #ffffff;      /* texto blanco */
+}
+
+ion-menu-button {
+  --color: #ffffff;      /* color blanco para el icono del menú */
+}
+
+/* botón Guardar */
+ion-button {
+  --background: #6a61cc;
+  --background-activated: #5a52b2;
+  --color: #fff;
+  border-radius: 8px;
+  font-weight: bold;
+}
