--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,28 +1,51 @@
-<ion-content>
-  <div class="login-form">
-    <div class="logo-container">
-      <img src="assets/logo.png" alt="Logo de la app" class="logo" />
-    </div>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Iniciar sesión</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-    <h1 class="ion-text-center">PlanGO</h1>
-    <h6 class="ion-text-center">Planifica tu día a día</h6>
-    <h2 class="ion-text-center">¡Bienvenido!</h2>
+<ion-content class="login-content">
+  <div class="login-wrapper">
+    <div class="login-form">
 
-    <ion-item>
-      <ion-label position="floating">Usuario</ion-label>
-      <ion-input [(ngModel)]="usuario" required minlength="3" maxlength="8"></ion-input>
-    </ion-item>
+      <div class="logo-container">
+        <img src="https://via.placeholder.com/80" alt="Logo" class="logo" />
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input [(ngModel)]="password" type="password" required pattern="[0-9]{4}"></ion-input>
-    </ion-item>
+      <h1>PlanGO</h1>
+      <h6>Planifica tu día a día</h6>
+      <h2>¡Bienvenido!</h2>
 
-    <ion-button expand="block" (click)="login()">Ingresar</ion-button>
+      <ion-item>
+        <ion-label position="floating">Usuario</ion-label>
+        <ion-input [(ngModel)]="usuario" name="usuario" type="text" required></ion-input>
+      </ion-item>
 
-    <div class="registro-link">
-      <ion-label>¿No tienes cuenta?</ion-label>
-      <ion-button fill="clear" size="small" (click)="goToRegister()">Registrarse</ion-button>
+      <ion-item>
+        <ion-label position="floating">Contraseña</ion-label>
+        <ion-input
+          [(ngModel)]="password"
+          name="password"
+          [type]="mostrarContrasena ? 'text' : 'password'"
+          required>
+        </ion-input>
+        <ion-icon
+          slot="end"
+          [name]="mostrarContrasena ? 'eye' : 'eye-off'"
+          style="color: #000; font-size: 1.5rem;"
+          (click)="togglePasswordVisibility()">
+        </ion-icon>
+      </ion-item>
+
+      <ion-button expand="block" (click)="login()">Ingresar</ion-button>
+
+      <div class="registro-link">
+        <ion-label>¿No tienes cuenta?</ion-label>
+        <ion-button fill="clear" size="small" [routerLink]="['/register']" routerDirection="root">
+          Registrarse
+        </ion-button>
+      </div>
+
     </div>
   </div>
 </ion-content>
