Subida inicial del proyecto PlanGO - Experiencia 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,9 @@
   <ion-content>
     <ion-list class="ion-no-padding">
       <ion-item lines="none">
-        <ion-avatar slot="start">
-          <img [src]="fotoPerfil || 'assets/avatar-default.png'" alt="Foto de perfil">
+        <ion-avatar slot="start" class="avatar-con-fondo">
+          <img *ngIf="fotoPerfil" [src]="fotoPerfil" alt="Foto de perfil">
+          <ion-icon *ngIf="!fotoPerfil" name="person-outline"></ion-icon>
         </ion-avatar>
         <ion-label>
           <h2>{{ nombreUsuario || 'Usuario' }}</h2>
@@ -30,13 +31,26 @@
       </ion-menu-toggle>
     </ion-list>
 
+    <div class="ion-padding">
+      <p *ngIf="direccion" class="ubicacion-menu">
+        📍 {{ direccion }}
+      </p>
+      <ion-button
+        *ngIf="direccion"
+        size="small"
+        fill="clear"
+        (click)="obtenerUbicacion()"
+        class="boton-actualizar-ubicacion">
+        🔄 Actualizar ubicación
+      </ion-button>
+    </div>
+
     <ion-button expand="full" color="danger" class="ion-margin" (click)="logout()">
       Cerrar sesión
     </ion-button>
   </ion-content>
 </ion-menu>
 
-<!-- Contenido principal -->
 <div class="ion-page" id="main-content">
   <ion-router-outlet></ion-router-outlet>
 </div>
