--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -2,7 +2,7 @@ html, body, ion-app, ion-content {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #f2ecf8; // fondo lila claro
+  background-color: #f2ecf8;
 }
 
 ion-toolbar {
@@ -19,15 +19,15 @@ ion-content {
 }
 
 .login-wrapper {
-  width: 100%;
+  width: 200%;
   max-width: 400px;
-  padding: 1rem;
+  padding: 0.3rem;
 }
 
 .login-form {
   background: white;
-  padding: 2rem;
-  border-radius: 1rem 1rem 0 0;
+  padding: 3rem 2rem; /* menos padding vertical, más horizontal si quieres */
+  border-radius: 0rem;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -35,14 +35,12 @@ ion-content {
 }
 
 .logo-container {
-  margin-bottom: 1.5rem;
-  display: flex;
-  justify-content: center;
+  margin-bottom: 2rem;
 }
 
 .logo {
-  width: 80px;
-  height: auto;
+  width: 200px;
+  height: 100px;
   border-radius: 50%;
 }
 
@@ -51,14 +49,14 @@ h1, h2, h6 {
 }
 
 ion-item {
-  margin-bottom: 1rem;
+  margin-bottom: 4rem;
   border-radius: 6px;
 }
 
 ion-button {
   margin-top: 1.5rem;
   --background: #6a61cc;
-  --background-activated: #005fa3;
+  --background-activated: #5a52b2;
   --box-shadow: 0 4px 12px rgba(0, 119, 204, 0.4);
   border-radius: 8px;
   font-weight: bold;
@@ -68,7 +66,6 @@ ion-button {
 .registro-link {
   margin-top: 1.5rem;
   font-size: 0.9rem;
-  color: #333;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,4 +76,14 @@ ion-button {
   text-decoration: underline;
   --background: transparent;
   padding: 0;
+}
+
+
+.foto-perfil {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%; /* para círculo */
+  object-fit: cover;
+  display: block;
+  margin: 0 auto; /* centrar */
 }
