--- a/src/app/pages/tareas/tareas.page.scss
+++ b/src/app/pages/tareas/tareas.page.scss
@@ -1,8 +1,4 @@
-ion-toolbar {
-  --background: #6980d3; /* color barra principal*/
-  --color: #ffffff;      /* texto blanco */
+ion-chip {
+  font-size: 12px;
 }
 
-ion-back-button {
-  --color: #ffffff;
-}
