--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,9 +7,8 @@
 <ion-content class="login-content">
   <div class="login-wrapper">
     <div class="login-form">
-
       <div class="logo-container">
-        <img src="https://via.placeholder.com/80" alt="Logo" class="logo" />
+        <img src="assets/icon/PlanGO.png" class="foto-perfil" alt="Logo PlanGO" />
       </div>
 
       <h1>PlanGO</h1>
@@ -17,8 +16,8 @@
       <h2>¡Bienvenido!</h2>
 
       <ion-item>
-        <ion-label position="floating">Usuario</ion-label>
-        <ion-input [(ngModel)]="usuario" name="usuario" type="text" required></ion-input>
+        <ion-label position="floating">Correo Electrónico</ion-label>
+        <ion-input [(ngModel)]="usuario" name="usuario" type="email" required></ion-input>
       </ion-item>
 
       <ion-item>
@@ -40,12 +39,14 @@
       <ion-button expand="block" (click)="login()">Ingresar</ion-button>
 
       <div class="registro-link">
+        <ion-button fill="clear" size="small" (click)="recuperarPassword()">
+          ¿Olvidaste tu contraseña?
+        </ion-button>
         <ion-label>¿No tienes cuenta?</ion-label>
         <ion-button fill="clear" size="small" [routerLink]="['/register']" routerDirection="root">
           Registrarse
         </ion-button>
       </div>
-
     </div>
   </div>
 </ion-content>
