--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -20,17 +20,54 @@ ion-avatar img {
   object-fit: cover;
 }
 
-/* botón de cambiar foto, cambiar contraseña y guardar cambios */
+/* botón global: cambiar foto, cambiar contraseña, obtener ubicación */
 ion-button {
-  --background: #6a61cc;
-  --background-activated: #5a52b2;
+  --background: #2c7ae0;
+  --background-activated: #5a51eb;
   --color: #fff;
   border-radius: 8px;
   font-weight: bold;
+}
+
+/* botón específico para guardar cambios en rosa */
+.boton-guardar {
+  --background: #5a52b2;
+  --background-activated: #5a52b2;
+  --color: white;
+  font-size: 1.1rem;
 }
 
 /* barra superior */
 ion-toolbar {
   --background: #6980d3; /* color barra principal */
   --color: #ffffff;      /* texto blanco */
+}
+
+.perfil-avatar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+
+  .avatar-con-fondo {
+    width: 60px;
+    height: 60px;
+    background: #e0e0e0 url('/assets/perfil.png') center/cover no-repeat;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    ion-icon {
+      font-size: 30px;
+      color: #999;
+    }
+  }
 }
