--- a/src/app/pages/tareas/tareas.page.html
+++ b/src/app/pages/tareas/tareas.page.html
@@ -1,59 +1,46 @@
+
+
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home" text="" color="light"></ion-back-button>
-    </ion-buttons>
     <ion-title>Tareas</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="agregarTarea()">
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
+
+
+
 <ion-content class="ion-padding">
-
-  <!-- Agregar nueva tarea -->
-  <ion-item>
-    <ion-input
-      placeholder="Nueva tarea..."
-      [(ngModel)]="nuevaTarea"
-      (keyup.enter)="agregarTarea()"
-    ></ion-input>
-    <ion-button fill="clear" (click)="agregarTarea()">
-      <ion-icon name="add" slot="icon-only"></ion-icon>
-    </ion-button>
-  </ion-item>
-
-  <!-- Lista de tareas -->
   <ion-list>
-    <ion-item *ngFor="let tarea of tareas; let i = index">
-      <ion-checkbox
-        slot="start"
-        [(ngModel)]="tarea.completada"
-        (ionChange)="toggleCompletada(i)"
-      ></ion-checkbox>
-
-      <ion-label *ngIf="!tarea.editando">
-        <h2 [style.text-decoration]="tarea.completada ? 'line-through' : 'none'">
-          {{ tarea.titulo }}
+    <ion-item *ngFor="let tarea of tareas">
+      <ion-label>
+        <h2>
+          {{ tarea.nombre }}
+          <ion-chip [color]="
+            tarea.prioridad === 'Alta' ? 'danger' :
+            tarea.prioridad === 'Media' ? 'warning' :
+            'success'
+          ">
+            {{ tarea.prioridad }}
+          </ion-chip>
         </h2>
+        <p>📂 {{ tarea.categoria }}</p>
+        <p>📝 {{ tarea.descripcion }}</p>
+        <p>📅 {{ tarea.fechaSugerida | date:'shortDate' }}</p>
+        <p>🎯 Puntos: {{ tarea.puntos }} | 🔥 Racha: {{ tarea.racha }}</p>
+        <p>🗒️ {{ tarea.notas }}</p>
       </ion-label>
-
-      <ion-input
-        *ngIf="tarea.editando"
-        [(ngModel)]="tarea.titulo"
-        (keyup.enter)="guardarEdicion(i)"
-      ></ion-input>
-
-      <ion-buttons slot="end">
-        <ion-button fill="clear" (click)="editarTarea(i)" *ngIf="!tarea.editando">
-          <ion-icon name="create" slot="icon-only"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="guardarEdicion(i)" *ngIf="tarea.editando">
-          <ion-icon name="checkmark" slot="icon-only"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" color="danger" (click)="eliminarTarea(i)">
-          <ion-icon name="trash" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-buttons>
+      <ion-checkbox slot="start" [(ngModel)]="tarea.completada" (ionChange)="toggleCompletada(tarea)"></ion-checkbox>
+      <ion-button fill="clear" (click)="editarTarea(tarea.id)">
+        <ion-icon slot="icon-only" name="create"></ion-icon>
+      </ion-button>
+      <ion-button fill="clear" color="danger" (click)="eliminarTarea(tarea.id)">
+        <ion-icon slot="icon-only" name="trash"></ion-icon>
+      </ion-button>
     </ion-item>
   </ion-list>
-
 </ion-content>
